--- a/TeX/CompPhys_Ex4_GreifHankla.tex
+++ b/TeX/CompPhys_Ex4_GreifHankla.tex
@@ -13,15 +13,23 @@
 \begin{document}
 \maketitle
 
-\section*{Exercise 2}
-We first need to calculate the 12 equations that we need to solve. For a systems of 3-bodies with masses $m_1$, $m_2$, and $m_3$ and initial positions $\vec x_1$, $\vec x_2$, and $\vec x_3$, this is straightforward. Note that we restrict the motion to a plane so that $\vec x_i = x_{ix}\hat x + x_{iy}\hat y$.\\
-\\
-Defining separation vectors
+\section*{Exercise 2: Neutrons in the grvitational field}
+
 \begin{align*}
-  \vec r_{12} &= \vec x_2 - \vec x_1\\
-  \vec r_{23} &= \vec x_3 - \vec x_2\\
-  \vec r_{31} &= \vec x_1 - \vec x_3
+  0 &= \bigg(-\frac{\hbar^2}{2m} \frac{\partial^2}{\partialz^2} + mgz \bigg)
+            \psi(z) - E \psi(z)  \\     
+  0 &= \bigg(-\frac{\hbar^2}{2m} \frac{1}{R^2} \frac{\partial^2}{\partialz^2} + mgRx \bigg)
+            \psi(x) - mgR\epsilon \psi(x)  \\       
+  0 &= \psi''(x) + (\epsilon - x) \psi(x)  
 \end{align*}
+
+where we used
+\begin{align*}
+  R &= \bigg( \frac{\hbar^2}{2m^2g} \bigg) ^(1/3)  \\
+  x &= z/R  \\
+  \epsilon &= \frac{E}{mgR}  
+\end{align*}
+
 the equations of motion are (setting Newton's gravitational constant $G=1$ and using dot for time derivative):
 \begin{align*}
   \ddot{\vec x}_1 &= \frac{m_2}{|r_{12}|^3}\vec r_{12}-\frac{m_3}{|r_{31}|^3}\vec r_{31}\\
