--- a/TeX/CompPhys_Ex4_GreifHankla.tex
+++ b/TeX/CompPhys_Ex4_GreifHankla.tex
@@ -19,13 +19,15 @@
 \begin{figure}[h!]
   \centering
   \includegraphics[width=.9\textwidth]{../exercise4_problem1_antisymEx.pdf}
-  \caption{} \label{fig:1a}
+  \caption{Antisymmetric solutions for harmonic oscillator using the Numerov Algorithm, compared to analytic solution} 
+  \label{fig:1a}
 \end{figure}
 
 \begin{figure}[h!]
   \centering
   \includegraphics[width=.9\textwidth]{../exercise4_problem1_symEx.pdf}
-  \caption{} \label{fig:1b}
+  \caption{Symmetric solutions for harmonic oscillator using the Numerov Algorithm, compared to analytic solution} 
+  \label{fig:1b}
 \end{figure}
 
 
