TeX: added unit analysis for 2.1

--- a/TeX/CompPhys_Ex4_GreifHankla.tex
+++ b/TeX/CompPhys_Ex4_GreifHankla.tex
@@ -49,8 +49,24 @@ where we used
   \epsilon &= \frac{E}{mgR}  
 \end{align*}
 
+with units
+\begin{align*}
+  [R] &= \bigg( \frac{[Energy \times time]^2}{[mass]^2 [length \times \time^{-2}]} \bigg) ^(1/3)  \\
+      &= [Energy^2 \times time^4 \times mass^{-2} \times length^{-1}]  \\
+      &= [[mass \times length^2 \times time^{-2}]^2 \times time^4 \times mass^{-2} \times length^{-1}]  \\
+      &= [mass^2 \times length^4 \times time^{-4} \times time^4 \times mass^{-2} \times length^{-1}]  \\
+      &= [length^3]  \\
+  [x] &= [length]/[length^3] = [length^{-2}]  \\
+  [\epsilon] &= \frac{[Energy]}{[mass][m][length \times \time^{-2}][length^3]}  \\
+             &= [Energy \times mass^{-1} \times length^{-1} \times time^2 \times length^-3 ] \\
+             &= [mass \times length^2 \times time^{-2} \times mass^{-1} \times length^{-1} \times time^2 \times length^{-3}]  \\
+             &= [length^{-2}]
+\end{align*}
+
+
 
 \subsection*{Part 1}
+
 
 
 
