--- a/TeX/CompPhys_Ex4_GreifHankla.tex
+++ b/TeX/CompPhys_Ex4_GreifHankla.tex
@@ -48,7 +48,7 @@
 where we used
 \begin{align*}
   R &= \bigg( \frac{\hbar^2}{2m^2g} \bigg) ^(1/3)  \\
-  x &= z/R  \\
+  x &= z/R = V(x) * \bigg( \frac{1}{mgR} \bigg)  \\
   \epsilon &= \frac{E}{mgR}  
 \end{align*}
 
